[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/player.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/Weapon.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.873
height = 37.0729

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 0.749176 )
texture = ExtResource( 1 )

[node name="FloorDetector" type="RayCast2D" parent="."]
position = Vector2( 0, 46 )
cast_to = Vector2( 0, 6 )

[node name="WallDetectorWest" type="RayCast2D" parent="."]
position = Vector2( -15, 0 )
cast_to = Vector2( -6, 0 )

[node name="WallDetectorEast" type="RayCast2D" parent="."]
position = Vector2( 15, 0 )
cast_to = Vector2( 6, 0 )

[node name="Down" type="RayCast2D" parent="."]

[node name="Weapon" parent="." instance=ExtResource( 3 )]
position = Vector2( 34.526, -11.1118 )
